--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
@@ -67,7 +67,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.HTMLSanitizer.0.1.3\lib\net462\HtmlAgilityPack.dll</HintPath>
+      <HintPath>9.5.292.19.HTMLSanitizer.0.1.3\lib\net462\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Ionic.Zip, Version=1.8.4.28, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
@@ -75,11 +75,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.9.5.292.19\lib\net462\kCura.dll</HintPath>
+      <HintPath>9.5.292.19.9.5.292.19\lib\net462\kCura.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.Apps.Common.Utils, Version=2.1.3.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Apps.Common.Utils.2.1.3\lib\net462\kCura.Apps.Common.Utils.dll</HintPath>
+      <HintPath>9.5.292.19.Apps.Common.Utils.2.1.3\lib\net462\kCura.Apps.Common.Utils.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.Assembly.Analysis, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
@@ -95,7 +95,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.HTMLSanitizer, Version=0.1.3.8, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.HTMLSanitizer.0.1.3\lib\net462\kCura.HTMLSanitizer.dll</HintPath>
+      <HintPath>9.5.292.19.HTMLSanitizer.0.1.3\lib\net462\kCura.HTMLSanitizer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.Image.Viewer, Version=9.5.292.19, Culture=neutral, PublicKeyToken=78cb9311e6f3ec3a, processorArchitecture=MSIL">
@@ -107,7 +107,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.Injection, Version=1.0.8.0, Culture=neutral, PublicKeyToken=318fc9f898ce154d, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Injection.9.5.292.19\lib\net462\kCura.Injection.dll</HintPath>
+      <HintPath>9.5.292.19.Injection.9.5.292.19\lib\net462\kCura.Injection.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="kCura.kCanvas, Version=8.0.0.0, Culture=neutral, PublicKeyToken=f8fcd18179f8fdff, processorArchitecture=MSIL">
@@ -227,7 +227,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="oi, Version=2017.3.3.13, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.OutsideIn.FI.Win32.2017.3.3\lib\net40\oi.dll</HintPath>
+      <HintPath>9.5.292.19.OutsideIn.FI.Win32.2017.3.3\lib\net40\oi.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
@@ -681,15 +681,15 @@ $(ProjectDir)..\Dependencies\PECOPY "$(TargetDir)$(TargetFileName)" "$(ProjectDi
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\kCura.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\kCura.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets'))" />
+    <Error Condition="!Exists('9.5.292.19.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets')" Text="$([System.String]::Format('$(ErrorText)', '9.5.292.19.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets'))" />
     <Error Condition="!Exists('..\packages\RelativityCore.9.5.292.19\build\RelativityCore.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\RelativityCore.9.5.292.19\build\RelativityCore.targets'))" />
     <Error Condition="!Exists('..\packages\Relativity.ImportExport.9.5.292.19\build\Relativity.ImportExport.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Relativity.ImportExport.9.5.292.19\build\Relativity.ImportExport.targets'))" />
-    <Error Condition="!Exists('..\packages\kCura.9.5.292.19\build\kCura.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\kCura.9.5.292.19\build\kCura.targets'))" />
+    <Error Condition="!Exists('9.5.292.19.9.5.292.19\build\kCura.targets')" Text="$([System.String]::Format('$(ErrorText)', '9.5.292.19.9.5.292.19\build\kCura.targets'))" />
   </Target>
-  <Import Project="..\packages\kCura.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets" Condition="Exists('..\packages\kCura.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets')" />
+  <Import Project="9.5.292.19.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets" Condition="Exists('9.5.292.19.OutsideIn.FI.Win32.2017.3.3\build\kCura.OutsideIn.FI.Win32.targets')" />
   <Import Project="..\packages\RelativityCore.9.5.292.19\build\RelativityCore.targets" Condition="Exists('..\packages\RelativityCore.9.5.292.19\build\RelativityCore.targets')" />
   <Import Project="..\packages\Relativity.ImportExport.9.5.292.19\build\Relativity.ImportExport.targets" Condition="Exists('..\packages\Relativity.ImportExport.9.5.292.19\build\Relativity.ImportExport.targets')" />
-  <Import Project="..\packages\kCura.9.5.292.19\build\kCura.targets" Condition="Exists('..\packages\kCura.9.5.292.19\build\kCura.targets')" />
+  <Import Project="9.5.292.19.9.5.292.19\build\kCura.targets" Condition="Exists('9.5.292.19.9.5.292.19\build\kCura.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
