--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
@@ -150,9 +150,9 @@
       <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.Windows.Process.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="kCura.WinEDDS, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="kCura.WinEDDS, Version=9.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\relativity\EDDS\kCura.WinEDDS\bin\kCura.WinEDDS.dll</HintPath>
+      <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.WinEDDS.dll</HintPath>
     </Reference>
     <Reference Include="kCura.WinEDDS.Core, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.WinEDDS.Core.dll</HintPath>
