--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
@@ -114,9 +114,9 @@
       <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.Windows.Process.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="kCura.WinEDDS, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="kCura.WinEDDS, Version=9.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\relativity\EDDS\kCura.WinEDDS\bin\kCura.WinEDDS.dll</HintPath>
+      <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.WinEDDS.dll</HintPath>
     </Reference>
     <Reference Include="kCura.WinEDDS.Core, Version=9.5.292.19, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Relativity.ImportExport.9.5.292.19\lib\net462\kCura.WinEDDS.Core.dll</HintPath>
@@ -356,9 +356,6 @@
     <Content Include="oi\unmanaged\scclo-R1.dll" />
     <Content Include="oi\unmanaged\sccut-R1.dll" />
     <Content Include="oi\unmanaged\wvcore-R1.dll" />
-    <Content Include="TestCases\Resources\IPROFullTextExpectedOutput.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
